--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flappy Bird</title>
     <script src = "app.js"></script>
+    <style>
+        button{
+            background-color: #4CAF50; /* Green */
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+        }
+    </style>
 </head>
 <body>
-    <canvas>
-        
-    </canvas>
+    <button onclick="setupGame(true)" id="easy">Average Flappy Bird Noob [EZ MODE]</button>
+    <button onclick="setupGame(false)" id="difficult">Supreme Flappy Bird Chad [DIFFICULT MODE]</button>
+    <canvas></canvas>
 </body>
 </html>
